added i18n with translations

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -2,5 +2,67 @@
     "menuProjects": "Projects",
     "menuAbout": "About us",
     "menuTeam": "Team",
-    "menuServices": "Services"
+    "menuServices": "Services",
+    "followUs": "Follow us",
+    "helloStranger": "Hello stranger!<br>So, you need some beautiful solutions for your business? Great! We're here to help you! Tell us what are you looking for. ",
+
+    "welcomeTo": "Welcome to",
+    "placeWhere": "Place where well-crafted <br>software projects are born.",
+    "ofDigitalAesthetics": "<i>Of</i> digital <br>aesthetics",
+    "weProduce": "We produce",
+    "digitalAndBrandDesign": "digital & <br>brand design",
+    "ourNewsletter": "<span style='color: #5777ff'>Our</span><br>newsletter",
+    "subscribe": "Subscribe",
+    "selected": "Selected",
+    "go": "Go",
+    "weEmpower": "We empower<br>client <span>to be loved</span>",
+    "weDeliver": "<span>We deliver</span> <span>what we promise</span>",
+    "engagingUser": "Engaging user experience, classy<br>web design & development, unique<br>brand identity solutions to shine.",
+    "ourClientsHome": "Our clients get industry leading digital products, all looking into the future. Years pass by and designs we provide are still worthy.",
+    "weMake": "We make it possible as 10+ years experience in digital world doesn’t go unnoticed.",
+    "gathering": "Gathering the best talents — engineers in minds helps us craft the best thought-out solutions.",
+    "ourTeam": "Our team puts client's<br>business needs above all, and <br>by saying that <span class='gradient-text'>we make communication with <br><span class='last-line'>clients the priority number one.</span></span>",
+    "weveBeen": "We've been researching interfaces in KanapkaMan's secret laboratories with no sleep all days and nights.",
+    "needSoftware": "Need a software?",
+    "becomeClient": "Become a client",
+    "startup": "Startup companies",
+    "eCommerce": "E-commerce",
+    "premium": "Premium products",
+
+    "servicesHeroHeader": "Software services<br> for companies",
+    "servicesHeroContent": "We produce software that solves users' needs and thanks to our<br>experience, it has a solid position on the market. Huge passion and<br>precision make the code we write clean and very high quality.<br>Thanks to this, it is easy to understand, maintain and expand by<br>other programming teams.",
+    
+    "techWeUse": "Technologies we use",
+
+    "doingWebName": "Web applications",
+    "doingWebDesc": "Our services include Android mobile applications, iOS mobile applications, as well as Flutter.",
+    "doingMobName": "Mobile applications",
+    "doingMobDesc": "Our services include dedicated software, software integration and software development.",
+    "doingOutName": "IT outsourcing",
+    "doingOutDesc": "Our services include outsourcing of programmers, remote cooperation as well as leasing entire SCRUM teams.",
+    "doingDesignName": "Product Design",
+    "doingDesignDesc": "Our services include product workshops, product strategy development as well as the creation of closed trainings",
+    "doingHardSoftName": "QA & software testing",
+    "doingHardSoftDesc": "Our services include quality consulting and audit, full cycle application testing, test automation and independent testing.",
+
+    "startFromWhere": "Where do we start from",
+    "startFromQueriesName": "Business inquiry",
+    "startFromQueriesDesc": "To understand your need, we will conduct a preliminary business analysis. At the meeting, we would like to know the purpose of your project, the problems associated with it and what you want to achieve. If you already have an application or code from a previous project, we can analyse it for you at this stage.",
+    "startFromWorkshopName": "Design workshops",
+    "startFromWorkshopDesc": "The next step is to organize design workshops. They can take place at your headquarters or at ours - you decide. During the workshops, we will determine the scope of work, adapt the team to your needs, and assign a project supervisor (a person who will represent your company at every stage). At this stage, we will also complete the project details and start cooperation.",
+    "startFromSoftName": "Software development",
+    "startFromSoftDesc": "This is the most important step, the phase of development of your product. Works will be divided into two-week sprints. After each of them you will receive a version of the verification software. At this stage, your team can be expanded to graphics and testers - all up to your needs.",
+    "startFromSupportName": "Support and further development of the project",
+    "startFromSupportDesc": "We are not the type of company that leaves you immediately after the application. We aim to have long and fruitful cooperation. If you need a technology partner , we have a team to provide you with it. We will make sure that your software is compatible with the latest versions of browsers and systems, and add new functions if necessary - everything you need to develop your project.",
+
+    "ourClientsServices": "Our clients",
+
+    "contactName": "Name",
+    "contactEmail": "Email",
+    "contactPhone": "Phone number",
+    "contactMessage": "Your message",
+    "contactSendMessage": "Send your<br>message",
+
+    "aboutHeroHeader": "Who we are",
+    "aboutHeroContent": "IT-SOLVE was founded out of passion for new technologies. To share our knowledge with pashion and to design and create useful as well as modern solutions for you- our clients."
 }
