--- a/src/locale/pl.json
+++ b/src/locale/pl.json
@@ -2,5 +2,66 @@
     "menuProjects": "Projekty",
     "menuAbout": "O nas",
     "menuTeam": "Zespół",
-    "menuServices": "Usługi"
+    "menuServices": "Usługi",
+    "followUs": "Zaobserwuj mas",
+    "helloStranger": "Cześć nieznajomy!<br>Więc potrzebujesz pięknych rozwiązań dla swojej firmy? Świetnie! Jesteśmy tutaj, aby Ci pomóc! Powiedz nam, czego szukasz.",
+
+    "welcomeTo": "Witaj w",
+    "placeWhere": "Miejsce, gdzie rodzą się starannie <br>opracowane projekty oprogramowania",
+    "ofDigitalAesthetics": "<i>🏠</i> cyfrowej <br>estetyczności",
+    "weProduce": "Zajmujemy się",
+    "digitalAndBrandDesign": "cyfrowym & <br>brand designem",
+    "ourNewsletter": "<span style='color: #5777ff'>Nasz</span><br>newsletter",
+    "subscribe": "Zasubskrybuj",
+    "selected": "Wybrane",
+    "go": "Sprójrz",
+    "weEmpower": "Wzmocniamy klientów<br> <span>aby byli kochani</span>",
+    "weDeliver": "<span>Dostarczamy</span> <span>to co obiecujemy</span>",
+    "engagingUser": "Zachęcające doświadczenie <br>użytkownika, elegancki projekt<br> i rozwój strony internetowej, <br>unikalne rozwiązania tożsamości marki, aby być rozpoznawalnym.",
+    "ourClientsHome": "Nasi klienci otrzymują wiodące na rynku produkty cyfrowe. Lata mijają, a dostarczane przez nas projekty są wciąż wartościowe.",
+    "weMake": "Robimy to możliwe, ponieważ ponad 10 lat doświadczenia w świecie cyfrowym nie idzie niezauważone.",
+    "gathering": "Zbieranie najlepszych talentów - inżynierów w umysłach pomaga nam tworzyć najlepiej przemyślane rozwiązania.",
+    "ourTeam": "Nasz zespół stawia potrzeby<br>biznesowe klienta ponad wszystko,<br> i mówiąc to <span class='gradient-text'>stawiamy komunikację z naszymi <br><span class='last-line'>klientami jako priorytet numer jeden.</span></span>",
+    "weveBeen": "Przez wszystkie dni i noce nieprzerwanie badaliśmy interfejsy w tajnych laboratoriach KanapkaMan bez snu.",
+    "needSoftware": "Potrzebujesz oprogramowania?",
+    "becomeClient": "Zostań klientem",
+    "startup": "firmy Startupowe",
+    "eCommerce": "E-biznes",
+    "premium": "Produkty premium",
+    "servicesHeroHeader": "Usługi<br>programistyczne<br>dla firm",
+    "servicesHeroContent": "Wytwarzamy oprogramowanie rozwiązujące potrzeby<br>użytkowników a dzięki naszemu doświadczeniu, zajmuje ono solidną<br>pozycję na rynku. Ogromna pasja oraz precyzja sprawiają, że<br>pisany przez nas kod jest czysty i bardzo wysokiej jakości. Dzięki<br>temu, jest on łatwy do zrozumienia, utrzymania i rozszerzania przez<br>inne zespoły programistyczne.",
+
+    "techWeUse": "Technologie jakie używamy",
+
+    "doingWebName": "Aplikacje webowe",
+    "doingWebDesc": "Tworzenie aplikacji mobilnych Android lub aplikacji iOS także we Flutter to nasza domena",
+    "doingMobName": "Aplikcaje mobilne",
+    "doingMobDesc": "Bez znaczenia czy potrzebujesz oprogramowania dedykowanego, integracji oprogramowania czy rozwoju oprogramowania w Software House, czekamy właśnie na Ciebie.",
+    "doingOutName": "Outsourcing",
+    "doingOutDesc": "Zoptymalizujemy koszty rozwoju i ocenimy Twoje możliwości dzięki naszej praktycznej wiedzy i doświadczeniu w branży IT.",
+    "doingDesignName": "Product Design",
+    "doingDesignDesc": "Zdefiniujemy zakres projektu, etapów rozwoju produktu, rynku konkurencji, kluczowych funkcjonalności, ale przede wszystkim skupimy się na użyteczności i wydajności aplikacji.",
+    "doingHardSoftName": "Hardware + software",
+    "doingHardSoftDesc": "Pomożemy obniżyć Ci koszty testowania oraz skrócić czas wprowadzania produktów na rynek dzięki naszemu doświadczeniu w zakresie zapewnienia jakości oprogramowania.",
+
+    "startFromWhere": "Od czego zaczynamy",
+    "startFromQueriesName": "Zapytanie biznesowe",
+    "startFromQueriesDesc": "Na początku przeprowadzamy wstępną analizę biznesową, której celem jest dogłębne zrozumienie Twoich potrzeb. Proponujemy spotkanie, gdzie zapoznamy się z Twoimi celami, problemami i głównym celem oprogramowania. Posiadasz kod lub aplikację? Na tym etapie możemy je poddać analizie.",
+    "startFromWorkshopName": "Warsztaty projektowe",
+    "startFromWorkshopDesc": "Następnym etapem jest organizacja warsztatów projektowych. Jesteśmy elastyczni, stąd Ty zadecydujesz czy odbędą się u nas czy w Twojej firmie. Podczas zajęć wyszczególniamy zakres prac, dobierzemy zespół do Twoich wymagań, a także dołączymy opiekuna projektu (reprezentanta, który w każdym momencie będzie reprezentował Twoją firmę). W tym momencie ustalimy wszystkie szczegóły projektu i zaczynamy współpracę.",
+    "startFromSoftName": "Rozwój oprogramowania",
+    "startFromSoftDesc": "To najważniejszy moment podczas tworzenia Twojego programu. Projekt zostanie rozdzielony na dwutygodniowe sprinty. Po każdym z nich dostaniesz aplikację do sprawdzenia i zatwierdzenia. W tym momencie Twoja drużyna może zostać rozwinięta o grafika i testerów. Wszystko zależy od zapotrzebowania.",
+    "startFromSupportName": "Wsparcie i dalszy rozwój projektu",
+    "startFromSupportDesc": "Nie jesteśmy jedną z firm porzucających swoich klientów po zakończeniu projektów. Oferujemy długofalową współpracę. Jeśli oczekujesz pomocy technologicznej, zapewnimy Ci zespół. Zapewniamy wszystko co będzie niezbędne do rozwoju Twojego projektu, w tym dostosowanie go do nowych wersji systemów czy przeglądarek oraz tworzenie nowych funkcji.",
+
+    "ourClientsServices": "Nasi klienci",
+
+    "contactName": "Imię",
+    "contactEmail": "Email",
+    "contactPhone": "Telefonu",
+    "contactMessage": "Wiadomość",
+    "contactSendMessage": "Wyślij swoją<br>wiadomość",
+
+    "aboutHeroHeader": "Kim jesteśmy",
+    "aboutHeroContent": "Firma KanapkaMan powstała z pasji do nowych technologii. Do dzielenia się naszą wiedzą. Do projektowania i tworzenia użytecznych i nowoczesnych rozwiązań dla Was - naszych klientów."
 }
