--- a/src/locale/pl.json
+++ b/src/locale/pl.json
@@ -43,6 +43,7 @@
     "doingDesignDesc": "Zdefiniujemy zakres projektu, etapów rozwoju produktu, rynku konkurencji, kluczowych funkcjonalności, ale przede wszystkim skupimy się na użyteczności i wydajności aplikacji.",
     "doingHardSoftName": "Hardware + software",
     "doingHardSoftDesc": "Pomożemy obniżyć Ci koszty testowania oraz skrócić czas wprowadzania produktów na rynek dzięki naszemu doświadczeniu w zakresie zapewnienia jakości oprogramowania.",
+    "seeMore": "Zobacz więcej",
 
     "startFromWhere": "Od czego zaczynamy",
     "startFromQueriesName": "Zapytanie biznesowe",
@@ -63,5 +64,10 @@
     "contactSendMessage": "Wyślij swoją<br>wiadomość",
 
     "aboutHeroHeader": "Kim jesteśmy",
-    "aboutHeroContent": "Firma KanapkaMan powstała z pasji do nowych technologii. Do dzielenia się naszą wiedzą. Do projektowania i tworzenia użytecznych i nowoczesnych rozwiązań dla Was - naszych klientów."
+    "aboutHeroContent": "Firma KanapkaMan powstała z pasji do nowych technologii. Do dzielenia się naszą wiedzą. Do projektowania i tworzenia użytecznych i nowoczesnych rozwiązań dla Was - naszych klientów.",
+
+    "weDoHeader": "Co robimy do<br>w KanapkaMan Software <br>House",
+    "weDoContent": "Każdego dnia tworzymy oprogramowanie, które rozwiązuje potrzeby użytkowników i znajduje swoje trwałe miejsce na rynku. Każda linia kodu jest tworzona z precyzją oraz ogromną pasją. To pozwala nam pisać czysty, wysokiej jakości kod, który jest łatwy do zrozumienia, utrzymania i rozszerzania przez innych programistów.",
+    "ourMissionHeader": "Nasza misja<br>w KanapkaMan <br>Software<br>House",
+    "ourMissionContent": "Naszą misją jest przekucie Twojego pomysłu w użyteczny, świetnie zaprojektowany, odnoszący sukces produkt. Przeprowadzimy Cię przez trudny początek, jakimi jest urzeczywistnienie Twojego pomysłu, wprowadzimy go na rynek i będziemy Cię wspierać również w późniejszej drodze, jaka Cię czeka"
 }
