about us section and internationalization - done

--- a/src/locale/pl.json
+++ b/src/locale/pl.json
@@ -69,5 +69,12 @@
     "weDoHeader": "Co robimy do<br>w KanapkaMan Software <br>House",
     "weDoContent": "Każdego dnia tworzymy oprogramowanie, które rozwiązuje potrzeby użytkowników i znajduje swoje trwałe miejsce na rynku. Każda linia kodu jest tworzona z precyzją oraz ogromną pasją. To pozwala nam pisać czysty, wysokiej jakości kod, który jest łatwy do zrozumienia, utrzymania i rozszerzania przez innych programistów.",
     "ourMissionHeader": "Nasza misja<br>w KanapkaMan <br>Software<br>House",
-    "ourMissionContent": "Naszą misją jest przekucie Twojego pomysłu w użyteczny, świetnie zaprojektowany, odnoszący sukces produkt. Przeprowadzimy Cię przez trudny początek, jakimi jest urzeczywistnienie Twojego pomysłu, wprowadzimy go na rynek i będziemy Cię wspierać również w późniejszej drodze, jaka Cię czeka"
+    "ourMissionContent": "Naszą misją jest przekucie Twojego pomysłu w użyteczny, świetnie zaprojektowany, odnoszący sukces produkt. Przeprowadzimy Cię przez trudny początek, jakimi jest urzeczywistnienie Twojego pomysłu, wprowadzimy go na rynek i będziemy Cię wspierać również w późniejszej drodze, jaka Cię czeka",
+
+    "ourOfficesOneHeader": "Nasze biuro",
+    "ourOfficesOneContent": "Nowoczesne biuro to nasz znak rozpoznawczy i jedno z najlepszych miejsc do pracy dla programistów w Częstochowie. Przestrzenne, komfortowe, zaprojektowane z dbałością o detale. Dzięki temu to miejsce idealne nie tylko do tworzenia wspaniałego oprogramowania ale także daje możliwość wypoczęcia. Komfort pracy to nasz priorytet, gdyż wierzymy, że przestrzeń w której sie znajdujemy, znacząco wpływa na jej jakość.",
+    "ourOfficesTwoHeader": "Kreatywna przestrzeń",
+    "ourOfficesTwoContent": "Pamiętając, że każdy z nas może preferować inny model pracy, przekształciliśmy nasze biuro w kreatywną przestrzeń tak, aby pisanie kodu było przyjemnością, a współpraca z klientem wywoływała u nas tylko entuzjazm. Nasza przestrzeń została zaprojektowana zgodnie z dewizą „wybierz pracę, którą kochasz, a nie przepracujesz w życiu ani jednego dnia”.",
+
+    "ourClientsHeader": "Opinie naszych klientów"
 }
