--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -70,5 +70,13 @@
     "weDoHeader": "What we do<br>at KanapkaMan Software <br>House",
     "weDoContent": "Every day we create software that solves the needs of users and finds its pernament place on the market. Each line of code is created with precision and great passion. This allows us to write clean, high- quality code that is easy for other programmers to understand, maintain and extend.",
     "ourMissionHeader": "Out mission<br>at KanapkaMan <br>Software<br>House",
-    "ourMissionContent": "Our mission is to transform your idea into a useful, well- designed, sucessful product. We will guide you through a difficult beginning, which is the implementation of your idea, we will introduce it to the market and support you  afterwards."
+    "ourMissionContent": "Our mission is to transform your idea into a useful, well- designed, sucessful product. We will guide you through a difficult beginning, which is the implementation of your idea, we will introduce it to the market and support you  afterwards.",
+
+    "ourOfficesOneHeader": "Our office",
+    "ourOfficesOneContent": "A modern office is our trademark and one of the best places to work for programmers in Częstochowa. Spacious, comfortable, designed with attention to detail. Thanks to this, this place is ideal not only for creating great software, but also gives the opportunity to relax. Work comfort is our priority, because we believe that the space we are in significantly affects its quality.",
+    "ourOfficesTwoHeader": "Creative space",
+    "ourOfficesTwoContent": "Remembering that each of us may prefer a different work model, we have transformed our office into a creative space so that writing code is a pleasure, and cooperation with the client only causes enthusiasm. Our space has been designed with the motto <b>choose a job that you love and you won't work a single day.</b>",
+
+    "ourClientsHeader": "Customers reviews"
+
 }
