--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -77,6 +77,8 @@
     "ourOfficesTwoHeader": "Creative space",
     "ourOfficesTwoContent": "Remembering that each of us may prefer a different work model, we have transformed our office into a creative space so that writing code is a pleasure, and cooperation with the client only causes enthusiasm. Our space has been designed with the motto <b>choose a job that you love and you won't work a single day.</b>",
 
-    "ourClientsHeader": "Customers reviews"
+    "ourClientsHeader": "Customers reviews",
 
+    "ourTeamHeroHeader": "Our team",
+    "ourTeamHeroContent": "We are here to support you. We do it with great pleasure because we simply love our work and our company. We believe that working in a team of specialists in their fields is more productive and effective."
 }
