--- a/src/locale/pl.json
+++ b/src/locale/pl.json
@@ -76,5 +76,8 @@
     "ourOfficesTwoHeader": "Kreatywna przestrzeń",
     "ourOfficesTwoContent": "Pamiętając, że każdy z nas może preferować inny model pracy, przekształciliśmy nasze biuro w kreatywną przestrzeń tak, aby pisanie kodu było przyjemnością, a współpraca z klientem wywoływała u nas tylko entuzjazm. Nasza przestrzeń została zaprojektowana zgodnie z dewizą „wybierz pracę, którą kochasz, a nie przepracujesz w życiu ani jednego dnia”.",
 
-    "ourClientsHeader": "Opinie naszych klientów"
+    "ourClientsHeader": "Opinie naszych klientów",
+
+    "ourTeamHeroHeader": "Zespół naszego software house",
+    "ourTeamHeroContent": "Jesteśmy po to, aby Cię wspierać. Robimy to z tym większą przyjemnością, że po prostu lubimy swoją pracę i swoje towarzystwo. Wierzymy, że praca w zespole złożonym ze specjalistów w swoich dziedzinach jest bardziej produktywna i skuteczniejsza."
 }
