--- a/src/locale/ru.json
+++ b/src/locale/ru.json
@@ -1,19 +1,19 @@
 {
-    "menuProjects": "Projects",
-    "menuAbout": "About us",
-    "menuTeam": "Team",
-    "menuServices": "Services",
-    "followUs": "Follow us",
-    "helloStranger": "Hello stranger!<br>So, you need some beautiful solutions for your business? Great! We're here to help you! Tell us what are you looking for. ",
+    "menuProjects": "Проекты",
+    "menuAbout": "О нас",
+    "menuTeam": "Команда",
+    "menuServices": "Услуги",
+    "followUs": "Подписывайтесь на нас",
+    "helloStranger": "Привет незнакомец!<br>Итак, вам нужны красивые решения для вашего бизнеса? Большой! Мы здесь, чтобы помочь вам! Расскажите нам, что вы ищете.",
 
-    "welcomeTo": "Welcome to",
-    "placeWhere": "Place where well-crafted <br>software projects are born.",
-    "ofDigitalAesthetics": "<i>Of</i> digital <br>aesthetics",
-    "weProduce": "We produce",
-    "digitalAndBrandDesign": "digital & <br>brand design",
-    "ourNewsletter": "<span style='color: #5777ff'>Our</span><br>newsletter",
-    "subscribe": "Subscribe",
-    "selected": "Selected",
+    "welcomeTo": "Добро пожаловать в",
+    "placeWhere": "Место, где рождаются хорошо <br>продуманные программные проекты.",
+    "ofDigitalAesthetics": "<i>🏠</i>цифровой <br>эстетики",
+    "weProduce": "Мы занимаемся",
+    "digitalAndBrandDesign": "цифровым & <br>бренд дизайном",
+    "ourNewsletter": "<span style='color: #5777ff'>Наш</span><br>нюзлетър",
+    "subscribe": "Подписаться",
+    "selected": "Избранные",
     "go": "Go",
     "weEmpower": "We empower<br>client <span>to be loved</span>",
     "weDeliver": "<span>We deliver</span> <span>what we promise</span>",
