--- a/src/locale/ua.json
+++ b/src/locale/ua.json
@@ -1,19 +1,19 @@
 {
-    "menuProjects": "Projects",
-    "menuAbout": "About us",
-    "menuTeam": "Team",
-    "menuServices": "Services",
-    "followUs": "Follow us",
-    "helloStranger": "Hello stranger!<br>So, you need some beautiful solutions for your business? Great! We're here to help you! Tell us what are you looking for. ",
+    "menuProjects": "Проекти",
+    "menuAbout": "Про нас",
+    "menuTeam": "Команда",
+    "menuServices": "Послуги",
+    "followUs": "Слідуй за нами",
+    "helloStranger": "Привіт, незнайомцю!<br>Отже, вам потрібні красиві рішення для вашого бізнесу? Чудово! Ми тут, щоб допомогти вам! Скажіть нам, що ви шукаєте. ",
 
-    "welcomeTo": "Welcome to",
-    "placeWhere": "Place where well-crafted <br>software projects are born.",
-    "ofDigitalAesthetics": "<i>Of</i> digital <br>aesthetics",
-    "weProduce": "We produce",
-    "digitalAndBrandDesign": "digital & <br>brand design",
-    "ourNewsletter": "<span style='color: #5777ff'>Our</span><br>newsletter",
-    "subscribe": "Subscribe",
-    "selected": "Selected",
+    "welcomeTo": "Ласкаво просимо до",
+    "placeWhere": "Місце, де народжуються добре опрацьовані <br> проекти програмного забезпечення.",
+    "ofDigitalAesthetics": "<i>🏠</i> цифрової <br>естетики",
+    "weProduce": "Ми займаємось",
+    "digitalAndBrandDesign": "цифровим & <br>бренд дизайном",
+    "ourNewsletter": "<span style='color: #5777ff'>Наш</span><br>нюзлет'р",
+    "subscribe": "Підпишіться",
+    "selected": "Вибрані",
     "go": "Go",
     "weEmpower": "We empower<br>client <span>to be loved</span>",
     "weDeliver": "<span>We deliver</span> <span>what we promise</span>",
