--- a/src/locale/ua.json
+++ b/src/locale/ua.json
@@ -58,6 +58,7 @@
 
     "ourClientsServices": "Our clients",
 
+    "contactTopic": "Topic",
     "contactHeader": "Contact us",
     "contactName": "Name",
     "contactEmail": "Email",
