fixed buttons backgrounds

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1,5 +1,6 @@
 {
     "menuProjects": "Projects",
+    "menuBlog": "Blog",
     "menuAbout": "About us",
     "menuTeam": "Team",
     "menuServices": "Services",
