--- a/src/locale/pl.json
+++ b/src/locale/pl.json
@@ -1,5 +1,6 @@
 {
     "menuProjects": "Projekty",
+    "menuBlog": "Blog",
     "menuAbout": "O nas",
     "menuTeam": "Zespół",
     "menuServices": "Usługi",
