fixed menu for ru and ua

--- a/src/locale/ru.json
+++ b/src/locale/ru.json
@@ -1,5 +1,6 @@
 {
     "menuProjects": "Проекты",
+    "menuBlog": "Блог",
     "menuAbout": "О нас",
     "menuTeam": "Команда",
     "menuServices": "Услуги",
