--- a/src/locale/ua.json
+++ b/src/locale/ua.json
@@ -1,5 +1,6 @@
 {
     "menuProjects": "Проекти",
+    "menuBlog": "Блог",
     "menuAbout": "Про нас",
     "menuTeam": "Команда",
     "menuServices": "Послуги",
