fetching blog posts from databse

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -83,5 +83,7 @@
     "ourClientsHeader": "Customers reviews",
 
     "ourTeamHeroHeader": "Our team",
-    "ourTeamHeroContent": "We are here to support you. We do it with great pleasure because we simply love our work and our company. We believe that working in a team of specialists in their fields is more productive and effective."
+    "ourTeamHeroContent": "We are here to support you. We do it with great pleasure because we simply love our work and our company. We believe that working in a team of specialists in their fields is more productive and effective.",
+
+    "blogPostsHeader": "Lates<br>articles"
 }
