--- a/src/locale/pl.json
+++ b/src/locale/pl.json
@@ -82,5 +82,7 @@
     "ourClientsHeader": "Opinie naszych klientów",
 
     "ourTeamHeroHeader": "Zespół naszego software house",
-    "ourTeamHeroContent": "Jesteśmy po to, aby Cię wspierać. Robimy to z tym większą przyjemnością, że po prostu lubimy swoją pracę i swoje towarzystwo. Wierzymy, że praca w zespole złożonym ze specjalistów w swoich dziedzinach jest bardziej produktywna i skuteczniejsza."
+    "ourTeamHeroContent": "Jesteśmy po to, aby Cię wspierać. Robimy to z tym większą przyjemnością, że po prostu lubimy swoją pracę i swoje towarzystwo. Wierzymy, że praca w zespole złożonym ze specjalistów w swoich dziedzinach jest bardziej produktywna i skuteczniejsza.",
+
+    "blogPostsHeader": "Najnowsze<br>artykuły"
 }
