--- a/src/locale/ru.json
+++ b/src/locale/ru.json
@@ -29,6 +29,8 @@
     "startup": "Startup companies",
     "eCommerce": "E-commerce",
     "premium": "Premium products",
+    "cookies": "Cookies",
+    "privacy": "Privacy",
 
     "servicesHeroHeader": "Software services<br> for companies",
     "servicesHeroContent": "We produce software that solves users' needs and thanks to our<br>experience, it has a solid position on the market. Huge passion and<br>precision make the code we write clean and very high quality.<br>Thanks to this, it is easy to understand, maintain and expand by<br>other programming teams.",
