added projects subpage/component

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -75,6 +75,9 @@
     "aboutHeroHeader": "Who we are",
     "aboutHeroContent": "IT-SOLVE was founded out of passion for new technologies. To share our knowledge with pashion and to design and create useful as well as modern solutions for you- our clients.",
 
+    "projectsHeader": "Our projects",
+    "projectsContent": "See what projects we implement for our clients<br>and we are 100% engaged in them!",
+
     "weDoHeader": "What we do<br>at KanapkaMan Software <br>House",
     "weDoContent": "Every day we create software that solves the needs of users and finds its pernament place on the market. Each line of code is created with precision and great passion. This allows us to write clean, high- quality code that is easy for other programmers to understand, maintain and extend.",
     "ourMissionHeader": "Our mission<br>at KanapkaMan <br>Software<br>House",
