--- a/src/locale/pl.json
+++ b/src/locale/pl.json
@@ -75,6 +75,9 @@
     "aboutHeroHeader": "Kim jesteśmy",
     "aboutHeroContent": "Firma KanapkaMan powstała z pasji do nowych technologii. Do dzielenia się naszą wiedzą. Do projektowania i tworzenia użytecznych i nowoczesnych rozwiązań dla Was - naszych klientów.",
 
+    "projectsHeader": "Nasze projekty",
+    "projectsContent": "Zobacz jakie projekty realizujemy dla<br>naszych Klientów w które angażujemy się w 100%",
+
     "weDoHeader": "Co robimy do<br>w KanapkaMan Software <br>House",
     "weDoContent": "Każdego dnia tworzymy oprogramowanie, które rozwiązuje potrzeby użytkowników i znajduje swoje trwałe miejsce na rynku. Każda linia kodu jest tworzona z precyzją oraz ogromną pasją. To pozwala nam pisać czysty, wysokiej jakości kod, który jest łatwy do zrozumienia, utrzymania i rozszerzania przez innych programistów.",
     "ourMissionHeader": "Nasza misja<br>w KanapkaMan <br>Software<br>House",
