--- a/locale/en.json
+++ b/locale/en.json
@@ -8,11 +8,10 @@
     "helloStranger": "Hello stranger!<br>So, you need some beautiful solutions for your business? Great! We're here to help you! Tell us what are you looking for. ",
 
     "welcomeTo": "Welcome to",
-    "placeWhere": "Place where well-crafted <br>software projects are born.",
-    "ofDigitalAesthetics": "<i>Of</i> digital <br>aesthetics",
+    "placeWhere": "Place where well-crafted software projects are born.",
+    "ofDigitalAesthetics": "Of digital aesthetics",
     "weProduce": "We produce",
-    "digitalAndBrandDesign": "digital & <br>brand design",
-    "ourNewsletter": "<span style='color: #5777ff'>Our</span><br>newsletter",
+    "digitalAndBrandDesign": "digital & brand design",
     "subscribe": "Subscribe",
     "selected": "Selected",
     "go": "Go",
