--- a/locale/pl.json
+++ b/locale/pl.json
@@ -8,11 +8,10 @@
     "helloStranger": "Cześć nieznajomy!<br>Więc potrzebujesz pięknych rozwiązań dla swojej firmy? Świetnie! Jesteśmy tutaj, aby Ci pomóc! Powiedz nam, czego szukasz.",
 
     "welcomeTo": "Witaj w",
-    "placeWhere": "Miejsce, gdzie rodzą się starannie <br>opracowane projekty oprogramowania",
-    "ofDigitalAesthetics": "<i>🏠</i> cyfrowej <br>estetyczności",
+    "placeWhere": "Miejsce, gdzie rodzą się starannie opracowane projekty oprogramowania",
+    "ofDigitalAesthetics": "🏠 cyfrowej estetyczności",
     "weProduce": "Zajmujemy się",
-    "digitalAndBrandDesign": "cyfrowym & <br>brand designem",
-    "ourNewsletter": "<span style='color: #5777ff'>Nasz</span><br>newsletter",
+    "digitalAndBrandDesign": "cyfrowym & brand designem",
     "subscribe": "Zasubskrybuj",
     "selected": "Wybrane",
     "go": "Go",
