--- a/locale/ru.json
+++ b/locale/ru.json
@@ -9,10 +9,9 @@
 
     "welcomeTo": "Добро пожаловать в",
     "placeWhere": "Место, где рождаются хорошо <br>продуманные программные проекты.",
-    "ofDigitalAesthetics": "<i>🏠</i>цифровой <br>эстетики",
+    "ofDigitalAesthetics": "🏠цифровой эстетики",
     "weProduce": "Мы занимаемся",
-    "digitalAndBrandDesign": "цифровым & <br>бренд дизайном",
-    "ourNewsletter": "<span style='color: #5777ff'>Наш</span><br>нюзлетър",
+    "digitalAndBrandDesign": "цифровым & бренд дизайном",
     "subscribe": "Подписаться",
     "selected": "Избранные",
     "go": "Go",
