--- a/locale/ua.json
+++ b/locale/ua.json
@@ -9,10 +9,9 @@
 
     "welcomeTo": "Ласкаво просимо до",
     "placeWhere": "Місце, де народжуються добре опрацьовані <br> проекти програмного забезпечення.",
-    "ofDigitalAesthetics": "<i>🏠</i> цифрової <br>естетики",
+    "ofDigitalAesthetics": "🏠 цифрової естетики",
     "weProduce": "Ми займаємось",
-    "digitalAndBrandDesign": "цифровим & <br>бренд дизайном",
-    "ourNewsletter": "<span style='color: #5777ff'>Наш</span><br>нюзлет'р",
+    "digitalAndBrandDesign": "цифровим & бренд дизайном",
     "subscribe": "Підпишіться",
     "selected": "Вибрані",
     "go": "Go",
